[chore] deploy on `actions`

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,9 @@
-name: Hexo Deploy
+name: Hexo Deploy to Github Pages
 
 on:
   push:
     branches:
-      - main  # 监听你的源代码分支，通常为 main 或 master
+      - main
 
 jobs:
   build-deploy:
