--- a/_config.yml
+++ b/_config.yml
@@ -102,5 +102,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/FanBB2333/FanBB2333.github.io.git
+  repo: git@github.com:FanBB2333/FanBB2333.github.io.git
   branch: gh-pages
