--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,13 +29,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Generate Hexo files
-        run: npm run build
-
       - name: Deploy to GitHub Pages
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          npx hexo deploy
+        run: hexo deploy
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
