--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Install Hexo
+        run: npm install -g hexo-cli
+
       - name: Deploy to GitHub Pages
         run: hexo deploy
         env:
