[chore] test CI5

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,6 +33,9 @@ jobs:
         run: npm install -g hexo-cli
 
       - name: Deploy to GitHub Pages
-        run: hexo deploy
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          hexo deploy
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
