[chore] test CI9

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,9 +9,10 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
-    # permissions:
-    #   pages: write      # to deploy to Pages
-    #   id-token: write   # to verify the deployment originates from an appropriate source
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+      contents: write  # 确保 GitHub Actions 有写权限
 
     steps:
       - name: Checkout code
