--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: FanBB2333
 language: en
 timezone: ''
 
@@ -102,7 +102,7 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  token: ${{ secrets.GITHUB_TOKEN }}
+  # token: ${{ secrets.GITHUB_TOKEN }}
   repo: git@github.com:FanBB2333/FanBB2333.github.io.git
   branch: gh-pages
 
