--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,6 +41,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          hexo deploy
+          npx hexo deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
