--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-      contents: write  # 确保 GitHub Actions 有写权限
+      pages: write
+      id-token: write
+      contents: write
 
     steps:
       - name: Checkout code
