feat: add titles

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: L1ghted Home
-subtitle: ''
-description: 'Welcome~'
+subtitle: 'Thoughts expands...'
+description: 'Welcome Home~'
 keywords:
-author: FanBB2333
+author: L1ght Ra1n
 language: en
 timezone: ''
 
